import 'package:flutter/foundation.dart';

import 'bootstrap.dart';

void main() {
  debugPrint('Payspin: Dart main()');
  bootstrap();
}
